# tinyx

./: Makefile.am  configure.ac
composite/: Makefile.am  compalloc.c  compext.c  compinit.c  compint.h  compoverlay.c  compwindow.c  privates.h
include/: pixmapstr.h  scrnintstr.h  windowstr.h
